src/unit_tests/CustCodeGeneration/fail/div0.cl
class Main inherits IO {
    main() : SELF_TYPE {{
        out_int(1231/0);
    }};
};